// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[react] Box should render 1`] = `
<div
  className="uni-655233114"
>
  Hello world
</div>
`;

exports[`[react] CacheProvider should render 1`] = `
<div>
  Hello world
</div>
`;

exports[`[react] ThemeProvider should render 1`] = `
<div>
  Hello world
</div>
`;

exports[`[react] styled should return a valid React component 1`] = `
<div
  className="uni-655233114"
>
  Hello world
</div>
`;
